# sagemaker-twitter-sentiment-deployment

./: .env.example  .gitignore  README.md  invoke_endpoint.py  pyproject.toml
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml
scripts/: bootstrap-github.sh
terraform/: README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
